--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			}
 		</script>
 	<ul>
-		<li><a href="/web" target="_blank">www.baidu.com</a></li><!-- 按钮6-->
+		<li><a href="http://106.52.109.116" target="_blank">WEB</a></li><!-- 按钮6-->
 		<li><a href="/app" target="_blank">APP</a></li><!-- 按钮6-->
 	</ul>
 	</nav></header>
