--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<head>
-<meta http-equiv="refresh" content="10; url=http://106.52.109.116">
-</head>
+<script type="text/javascript">window.location.href="htts://106.52.109.116";</script>
